<resources>
    <string name="app_name">Taxi Flow</string>
    <string name="taxiflowlogo">TAXIFLOWLOGO</string>
    <string name="escribe_tu_taxi_id">Escribe tu Taxi ID</string>
    <string name="name">Name</string>
    <string name="placa">Placa</string>
    <string name="enviar_datos">ENVIAR DATOS</string>
    <string name="bluethoot_menu">Bluethoot_menu</string>
    <string name="login_menu">Login_menu</string>
    <string name="identificaci_n">Identificación</string>
    <string name="identificacion">Identificacion</string>
    <string name="stop">STOP</string>
    <string name="send_data">Send data</string>
    <string name="location">Location</string>
    <string name="rpm">rpm</string>
    <string name="logoimage">LogoImage</string>
</resources>